fix(dialog): Dialog is not centered on screen
413

--- a/packages/mdc-dialog/mdc-dialog.scss
+++ b/packages/mdc-dialog/mdc-dialog.scss
@@ -38,7 +38,6 @@ $mdc-dialog-dark-theme-bg-color: #303030 !default;
   &__surface {
     display: inline-flex;
     position: absolute;
-    bottom: 50vh;
     flex-direction: column;
 
     @include mdc-elevation(24);
